--- a/AppDev2ndCW/Views/Home/index.cshtml
+++ b/AppDev2ndCW/Views/Home/index.cshtml
@@ -6,7 +6,7 @@
     <div class="masthead-content">
         <div class="container">
             <h1 class="masthead-heading mb-0">One Page Wonder</h1>
-            <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
+            <h2 class="masthead-subheading mb-0">Will Rock Your Pant Off</h2>
             <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
         </div>
     </div>
