--- a/AppDev2ndCW/Views/Shared/_IndexLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_IndexLayout.cshtml
@@ -28,14 +28,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Start Bootstrap</a>
+            <a class="navbar-brand" href="#">Nepal ko BooK Pashal</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.ActionLink("Register", "Home")">Sign Up</a>
+                        <a class="nav-link" href="@Url.ActionLink("Register", "Home")">REGISTER USERS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.ActionLink("Login", "Home")">Log In</a>
