Dasboard Layout Setup

--- a/AppDev2ndCW/Views/Shared/_IndexLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_IndexLayout.cshtml
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Book Pashal (मेरो किताब)</title>
+    <title>Pustakalaya</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,11 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
-<<<<<<< HEAD
-            <a class="navbar-brand" href="@Url.ActionLink("Index", "Home")">Pustakalaya</a>
-=======
-            <a class="navbar-brand" href="index">Nepal ko Book PAshal (नेपाल को पुस्तकालय)</a>
->>>>>>> c459191c042f095dde0722ed0b0346356fe6829e
+            <a class="navbar-brand" href="@Url.ActionLink("Index", "Home")">Nepal ko Book PAshal (नेपाल को पुस्तकालय)</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
