changing dashboard UI and index page (temporary)

--- a/AppDev2ndCW/Views/Admin/Customer.cshtml
+++ b/AppDev2ndCW/Views/Admin/Customer.cshtml
@@ -14,7 +14,7 @@
                 <div class="bg-white shadow roundy p-4 h-100 d-flex align-items-center justify-content-between">
                     <div class="flex-grow-1 d-flex align-items-center">
                         <div class="text">
-                            <h6 class="mb-0">Add New Book</h6>@*<span class="text-gray">Add New Book</span>*@
+                            <h6 class="mb-0">Add New Customer</h6>@*<span class="text-gray">Add New Book</span>*@
                         </div>
                     </div>
                     <div class="icon text-white bg-green"><i class="fas fa-plus"></i></div>
