--- a/AppDev2ndCW/Views/Home/Login.cshtml
+++ b/AppDev2ndCW/Views/Home/Login.cshtml
@@ -4,6 +4,8 @@
 
 @{
     Layout = "_IndexLayout";
+    var returnUrl = ViewData["ReturnUrl"] as string;
+    var error = TempData["Error"] as string;
 }
 
 @section manualCSS {
@@ -118,14 +120,18 @@ body {
             <div class="card card-signin my-5">
                 <div class="card-body">
                     <h5 class="card-title text-center">Sign In</h5>
-                    <form class="form-signin">
+                    @if (!string.IsNullOrEmpty(error))
+                    {
+                        <h2 class="alert-danger" style="padding:20px;">@error</h2>
+                    }
+                    <form class="form-signin" action="/Home/Login?ReturnUrl=@System.Net.WebUtility.UrlEncode(returnUrl)" method="post">
                         <div class="form-label-group">
-                            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                            <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
                             <label for="inputEmail">Email address</label>
                         </div>
 
                         <div class="form-label-group">
-                            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                            <input type="password" name="contact" id="inputPassword" class="form-control" placeholder="Password" required>
                             <label for="inputPassword">Password</label>
                         </div>
 
