--- a/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
@@ -89,7 +89,7 @@
                     <div aria-labelledby="userInfo" class="dropdown-menu">
                         <a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">Mark Stephen</strong><small>Web Developer</small></a>
                         <div class="dropdown-divider"></div><a href="#" class="dropdown-item">Settings</a><a href="#" class="dropdown-item">Activity log       </a>
-                        <div class="dropdown-divider"></div><a href="login.html" class="dropdown-item">Logout</a>
+                        <div class="dropdown-divider"></div><a href="/Home/Logout" class="dropdown-item">Logout</a>
                     </div>
                 </li>
             </ul>
