--- a/AppDev2ndCW/Views/Home/index.cshtml
+++ b/AppDev2ndCW/Views/Home/index.cshtml
@@ -1,19 +1,18 @@
 ﻿@{ 
     Layout = "_IndexLayout";
 }
-
 <header class="masthead text-center text-white">
     <div class="masthead-content">
         <div class="container">
             <h1 class="masthead-heading mb-0">Pustak-ala-ya</h1>
-            <h2 class="masthead-subheading mb-0">Rock Your Book stock</h2>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+            <h2 class="masthead-subheading mb-0">A Book Stock Management System built with simplicity and minimalism</h2>
+            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5" style="background-color:#CF000F;">Learn More</a>
         </div>
     </div>
-    <div class="bg-circle-1 bg-circle"></div>
+    <!--<div class="bg-circle-1 bg-circle"></div>
     <div class="bg-circle-2 bg-circle"></div>
     <div class="bg-circle-3 bg-circle"></div>
-    <div class="bg-circle-4 bg-circle"></div>
+    <div class="bg-circle-4 bg-circle"></div>-->
 </header>
 
 <section>
