adding required views

--- a/AppDev2ndCW/Views/Home/index.cshtml
+++ b/AppDev2ndCW/Views/Home/index.cshtml
@@ -1,6 +1,11 @@
 ﻿@{ 
     Layout = "_IndexLayout";
 }
+<style>
+    header.masthead {
+        background-image: url(images/booklib.jpg);
+    }
+</style>
 <header class="masthead text-center text-white">
     <div class="masthead-content">
         <div class="container">
