--- a/AppDev2ndCW/Views/Admin/Home.cshtml
+++ b/AppDev2ndCW/Views/Admin/Home.cshtml
@@ -30,7 +30,7 @@
                     <div class="flex-grow-1 d-flex align-items-center">
                         <div class="text">
                             <a href="#">
-                                <img src="~/img/manage_users.svg" alt="Add User SVG" class="img-fluid" />
+                                <img src="~/img/manage_users.svg" alt="Manage User SVG" class="img-fluid" />
                                 <h6 class="mb-0">Manage Users</h6>
                             </a>
                         </div>
@@ -38,6 +38,21 @@
                     <div class="icon text-white bg-green p-4"><i class="fas fa-bars"></i></div>
                 </div>
             </div>
+
+            <div class="col-xl-3 col-lg-6 mb-4 mb-xl-0">
+                <div class="bg-white shadow roundy p-4 h-100 d-flex align-items-center justify-content-between">
+                    <div class="flex-grow-1 d-flex align-items-center">
+                        <div class="text">
+                            <a href="@Url.ActionLink("AddCustomers", "Admin")">
+                                <img src="~/img/add_customer.svg" alt="Add Customer SVG" class="img-fluid" />
+                                <h6 class="mb-0">Add Customers</h6>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="icon text-white bg-green p-4"><i class="fas fa-user-plus"></i></div>
+                </div>
+            </div>
+
         </div>
     </section>
 </div>
