--- a/AppDev2ndCW/Views/Home/index.cshtml
+++ b/AppDev2ndCW/Views/Home/index.cshtml
@@ -4,6 +4,11 @@
 <style>
     header.masthead {
         background-image: url(images/booklib.jpg);
+        background-size: cover;
+    }
+    .btn-primary {
+        background-color: darkred;
+        border-color: darkred;
     }
 </style>
 <header class="masthead text-center text-white">
