--- a/AppDev2ndCW/Views/Shared/_IndexLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_IndexLayout.cshtml
@@ -48,12 +48,12 @@
     @RenderBody()
 
     <!-- Footer -->
-    <footer class="py-5 bg-black">
+    <!--<footer class="py-5 bg-black">
         <div class="container">
             <p class="m-0 text-center text-white small">Copyright &copy; Pustakalaya @DateTime.Now.Year</p>
-        </div>
+        </div>-->
         <!-- /.container -->
-    </footer>
+    <!--</footer>-->
 
     <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.min.js"></script>
