changing user icon

--- a/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
@@ -87,9 +87,9 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown ml-auto">
-                    <a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="/img/01.jpg" style="max-width: 2.5rem;" class="img-fluid rounded-circle shadow"></a>
+                    <a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="/img/user1.png" style="max-width: 2.5rem;" class="img-fluid rounded-circle shadow"></a>
                     <div aria-labelledby="userInfo" class="dropdown-menu">
-                        <a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">Mark Stephen</strong><small>Web Developer</small></a>
+                        <a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">Admin</strong></a>
                         <div class="dropdown-divider"></div><a href="#" class="dropdown-item">Settings</a><a href="#" class="dropdown-item">Activity log       </a>
                         <div class="dropdown-divider"></div><a href="/Home/Logout" class="dropdown-item">Logout</a>
                     </div>
@@ -153,10 +153,10 @@
                         <div class="col-md-6 text-center text-md-left text-primary">
                             <p class="mb-2 mb-md-0">Team Development &copy; 2021</p>
                         </div>
-                        <div class="col-md-6 text-center text-md-right text-gray-400">
-                            <p class="mb-0">Design by <a href="https://bootstrapious.com/admin-templates" class="external text-gray-400">Bootstrapious</a></p>
+                        <!--<div class="col-md-6 text-center text-md-right text-gray-400">
+                            <p class="mb-0">Design by <a href="https://bootstrapious.com/admin-templates" class="external text-gray-400">Bootstrapious</a></p>-->
                             <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
-                        </div>
+                        <!--</div>-->
                     </div>
                 </div>
             </footer>
