--- a/AppDev2ndCW/Views/Admin/AddCustomers.cshtml
+++ b/AppDev2ndCW/Views/Admin/AddCustomers.cshtml
@@ -20,7 +20,7 @@
 
             <!-- Registeration Form -->
             <div class="col-md-7 col-lg-6 ml-auto">
-                <form action="#">
+                <form action="/Admin/AddCustomers" method="post">
                     <div class="row">
 
                         <!-- Name -->
@@ -53,7 +53,7 @@
                             <select id="countryCode" name="countryCode" style="max-width: 80px" class="custom-select form-control bg-white border-left-0 border-md h-100 font-weight-bold text-muted">
                                 <option value="">+977</option>
                             </select>
-                            <input id="phoneNumber" type="tel" name="phone" placeholder="Phone Number" class="form-control bg-white border-md border-left-0 pl-3" required>
+                            <input id="phoneNumber" type="number" name="phone" placeholder="Phone Number" class="form-control bg-white border-md border-left-0 pl-3" required>
                         </div>.
 
                         <!-- Customer Address -->
@@ -76,8 +76,8 @@
                             </div>
                             <select id="job" name="jobtitle" class="form-control custom-select bg-white border-left-0 border-md">
                                 <option value="">Choose the membership type</option>
-                                <option value="">Standard</option>
-                                <option value="">Premium</option>
+                                <option value="Standard">Standard</option>
+                                <option value="Premium">Premium</option>
                             </select>
                         </div>
 
@@ -91,15 +91,15 @@
                                     <i class="fa fa-calendar text-muted"></i>
                                 </span>
                             </div>
-                            <input type="date" placeholder="" class="form-control py-4 px-4" id="lastPurchasedDate">
+                            <input type="date" name="lastDate" placeholder="" class="form-control py-4 px-4" id="lastPurchasedDate">
                         </div>
 
 
                         <!-- Submit Button -->
                         <div class="form-group col-lg-12 mx-auto mb-0">
-                            <a href="#" class="btn btn-primary btn-block py-2">
+                            <button class="btn btn-primary btn-block py-2">
                                 <span class="font-weight-bold">Add Customer <i class="fas fa-user ml-2"></i></span>
-                            </a>
+                            </button>
                         </div>
 
                     </div>
