--- a/AppDev2ndCW/Views/Admin/AddUsers.cshtml
+++ b/AppDev2ndCW/Views/Admin/AddUsers.cshtml
@@ -17,7 +17,7 @@
 
             <!-- Registeration Form -->
             <div class="col-md-7 col-lg-6 ml-auto">
-                <form action="#">
+                <form action="/Admin/AddUsers" method="post">
                     <div class="row">
 
                         <!-- Name -->
@@ -50,7 +50,7 @@
                             <select id="countryCode" name="countryCode" style="max-width: 80px" class="custom-select form-control bg-white border-left-0 border-md h-100 font-weight-bold text-muted">
                                 <option value="">+977</option>
                             </select>
-                            <input id="phoneNumber" type="tel" name="phone" placeholder="Phone Number" class="form-control bg-white border-md border-left-0 pl-3" required>
+                            <input id="phoneNumber" type="number" name="phone" placeholder="Phone Number" class="form-control bg-white border-md border-left-0 pl-3" required>
                         </div>.
 
 
@@ -61,10 +61,10 @@
                                     <i class="fa fa-user-tie text-muted"></i>
                                 </span>
                             </div>
-                            <select id="job" name="jobtitle" class="form-control custom-select bg-white border-left-0 border-md">
+                            <select id="job" name="jobtitle"  class="form-control custom-select bg-white border-left-0 border-md">
                                 <option value="">Choose the account type</option>
-                                <option value="">Admin</option>
-                                <option value="">Normal</option>
+                                <option value="Admin">Admin</option>
+                                <option value="Normal">Normal</option>
                             </select>
                         </div>
 
@@ -90,9 +90,9 @@
 
                         <!-- Submit Button -->
                         <div class="form-group col-lg-12 mx-auto mb-0">
-                            <a href="#" class="btn btn-primary btn-block py-2">
+                            <button class="btn btn-primary btn-block py-2" >
                                 <span class="font-weight-bold">Add User <i class="fas fa-user-plus ml-2"></i></span>
-                            </a>
+                            </button>
                         </div>
 
                     </div>
