--- a/AppDev2ndCW/Views/Home/index.cshtml
+++ b/AppDev2ndCW/Views/Home/index.cshtml
@@ -5,6 +5,7 @@
     header.masthead {
         background-image: url(images/booklib.jpg);
         background-size: cover;
+        background-size: 100%;
     }
     .btn-primary {
         background-color: darkred;
@@ -16,7 +17,7 @@
         <div class="container">
             <h1 class="masthead-heading mb-0">Pustak-ala-ya</h1>
             <h2 class="masthead-subheading mb-0">A Book Stock Management System built with simplicity and minimalism</h2>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5" style="background-color:#CF000F;">Learn More</a>
+            @*<a href="#" class="btn btn-primary btn-xl rounded-pill mt-5" style="background-color:#CF000F;">Learn More</a>*@
         </div>
     </div>
     <!--<div class="bg-circle-1 bg-circle"></div>
