--- a/AppDev2ndCW/Views/Home/Login.cshtml
+++ b/AppDev2ndCW/Views/Home/Login.cshtml
@@ -138,8 +138,8 @@ body { background-image: url('https://www.maxpixel.net/static/photo/1x/Blue-Book
                             <label class="custom-control-label" for="customCheck1">Remember password</label>
                         </div>
                         <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" style="background-color: #CF000F">Sign in</button>
-                        <hr class="my-4">
-                        <a class="d-block text-center mt-2 small" href="@Url.ActionLink("Register", "Home")">Don't Have an account? Sign Up Instead</a>
+                        @*<hr class="my-4">
+                        <a class="d-block text-center mt-2 small" href="@Url.ActionLink("Register", "Home")">Don't Have an account? Sign Up Instead</a>*@
                     </form>
                 </div>
             </div>
