--- a/AppDev2ndCW/Views/Shared/_IndexLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_IndexLayout.cshtml
@@ -32,7 +32,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+            @*<div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.ActionLink("Register", "Home")">REGISTER USERS</a>
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="@Url.ActionLink("Login", "Home")">Log In</a>
                     </li>
                 </ul>
-            </div>
+            </div>*@
         </div>
     </nav>
 
