--- a/AppDev2ndCW/Views/Users/Dashboard.cshtml
+++ b/AppDev2ndCW/Views/Users/Dashboard.cshtml
@@ -4,11 +4,77 @@
 }
 
 <div class="container-fluid px-xl-5">
-    <section class="py-5">
+    <section class="pt-5">
         <div class="row">
             <div class="col-xl-5 col-lg-6 mb-4 mb-xl-0 mx-auto">
                     <img src="~/img/dashboard.svg" alt="Add User SVG" class="img-fluid" />
                     <p class="text-center h3 my-3">Welcome to your Dashboard! <i class="fas fa-th text-primary"></i></p>
+            </div>
+        </div>
+    </section>
+</div>
+
+<div class="container-fluid">
+    <section class="pb-5">
+        <div class="row">
+            <div class="col-md-8 mx-auto p-3">
+                <div class="row">
+                    <div class="col-lg-6 mb-4 mb-xl-0 p-4">
+                        <div class="bg-white shadow roundy p-4 h-100 d-flex align-items-center justify-content-between">
+                            <div class="flex-grow-1 d-flex align-items-center">
+                                <div class="text text-center">
+                                    <a href="@Url.ActionLink("InactiveCustomers", "Users")">
+                                        <img src="~/img/inactive_customers.svg" alt="Add User SVG" class="img-fluid" />
+                                        <h6 class="mb-0">Inactive Customers</h6>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="icon text-white bg-green p-4"><i class="fas fa-bars"></i></div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 mb-4 mb-xl-0 p-4">
+                        <div class="bg-white shadow roundy p-4 h-100 d-flex align-items-center justify-content-between">
+                            <div class="flex-grow-1 d-flex align-items-center">
+                                <div class="text">
+                                    <a href="@Url.ActionLink("InactiveItems", "Users")">
+                                        <img src="~/img/browse_inactive_items.svg" alt="Manage User SVG" class="img-fluid" />
+                                        <h6 class="mb-0">Inactive Items</h6>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="icon text-white bg-green p-4"><i class="fas fa-bars"></i></div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 mb-4 mb-xl-0 p-4">
+                        <div class="bg-white shadow roundy p-4 h-100 d-flex align-items-center justify-content-between">
+                            <div class="flex-grow-1 d-flex align-items-center">
+                                <div class="text">
+                                    <a href="@Url.ActionLink("OutOfStock", "Users")">
+                                        <img src="~/img/out_of_stock.svg" alt="Add Customer SVG" class="img-fluid" />
+                                        <h6 class="mb-0">Items Out of Stock</h6>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="icon text-white bg-green p-4"><i class="fas fa-eye"></i></div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 mb-4 mb-xl-0 p-4">
+                        <div class="bg-white shadow roundy p-4 h-100 d-flex align-items-center justify-content-between">
+                            <div class="flex-grow-1 d-flex align-items-center">
+                                <div class="text">
+                                    <a href="@Url.ActionLink("LongStocked", "Users")">
+                                        <img src="~/img/long_stocked.svg" alt="Add Customer SVG" class="img-fluid" />
+                                        <h6 class="mb-0">Long Stocked Items</h6>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="icon text-white bg-green p-4"><i class="fas fa-eye"></i></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
