--- a/AppDev2ndCW/Views/Admin/ManageCustomers.cshtml
+++ b/AppDev2ndCW/Views/Admin/ManageCustomers.cshtml
@@ -7,49 +7,43 @@
     <div class="row">
         <div class="col-md-6 mx-auto">
             <div class="text-center">
-                <div class="row mb-4">
+                <p class="h3">Manage Customers <i class="fas fa-users ml-2"></i></p>
+                <div class="row my-4">
                     <div class="col-md-8 mx-auto">
-                        <img src="/img/inventory.svg" alt="Book SVG" class="img-fluid" />
+                        <img src="/img/customers.svg" alt="Users SVG" class="img-fluid" />
                     </div>
                 </div>
-                <p class="h3">Book Inventory</p>
             </div>
         </div>
     </div>
 
     <div my-4>
-        <div class="row my-4">
+        <div class="row py-5">
             <div class="col-lg-11 mx-auto">
-                <div class="card border-0 shadow">
-                    <div class="card-body p-5">
-
-                        <!-- Responsive table -->
+                <div class="card rounded shadow border-0">
+                    <div class="card-body p-5 bg-white rounded">
                         <div class="table-responsive">
-                            <table class="table m-0">
+                            <table id="example" style="width:100%" class="table table-striped table-bordered">
                                 <thead>
                                     <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">Title</th>
-                                        <th scope="col">Author</th>
-                                        <th scope="col">Category</th>
-                                        <th scope="col">Stocked Date</th>
-                                        <th scope="col">Stock Quantity</th>
-                                        <th scope="col">Sales Date</th>
-                                        <th scope="col">Action</th>
+                                        <th>Name</th>
+                                        <th>Email</th>
+                                        <th>Address</th>
+                                        <th>Contact</th>
+                                        <th>Member Type</th>
+                                        <th>Last Purchased</th>
+                                        <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-
                                     <tr>
-                                        <th scope="row">1</th>
-                                        <td>The Alchemist</td>
-                                        <td>Paulo Coehelo</td>
-                                        <td>Novels</td>
-                                        <td>26 April, 2021</td>
-                                        <td>100</td>
-                                        <td>28 April, 2021</td>
+                                        <td>Tiger Nixon</td>
+                                        <td>tn@tnt.com</td>
+                                        <td>Kathmandu</td>
+                                        <td>9810293849</td>
+                                        <td>Standard</td>
+                                        <td>April 26, 2021</td>
                                         <td>
-                                            <!-- Call to action buttons -->
                                             <ul class="list-inline m-0">
                                                 <li class="list-inline-item">
                                                     <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
@@ -60,14 +54,13 @@
                                             </ul>
                                         </td>
                                     </tr>
-
                                 </tbody>
                             </table>
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
