--- a/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
@@ -90,7 +90,9 @@
                     <a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="/img/user1.png" style="max-width: 2.5rem;" class="img-fluid rounded-circle shadow"></a>
                     <div aria-labelledby="userInfo" class="dropdown-menu">
                         <a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">Admin</strong></a>
-                        <div class="dropdown-divider"></div><a href="#" class="dropdown-item">Settings</a><a href="#" class="dropdown-item">Activity log       </a>
+                        <div class="dropdown-divider"></div>
+                        @*<a href="#" class="dropdown-item">Settings</a>*@
+                        <a href="@Url.ActionLink("ChangePassword", "Users")" class="dropdown-item">Change Password</a>
                         <div class="dropdown-divider"></div><a href="/Home/Logout" class="dropdown-item">Logout</a>
                     </div>
                 </li>
@@ -101,7 +103,7 @@
         <div id="sidebar" class="sidebar py-3">
             <div class="text-gray-400 text-uppercase px-3 px-lg-4 py-4 font-weight-bold small headings-font-family">MAIN</div>
             <ul class="sidebar-menu list-unstyled">
-                <li class="sidebar-list-item"><a href="@Url.ActionLink("Dashboard", "Users")" class="sidebar-link text-muted active"><i class="o-network-1 mr-3 text-gray"></i><span>Dashboard</span></a></li>
+                <li class="sidebar-list-item"><a href="@Url.ActionLink("Dashboard", "Users")" class="sidebar-link text-muted"><i class="o-network-1 mr-3 text-gray"></i><span>Dashboard</span></a></li>
                 <li class="sidebar-list-item"><a href="@Url.ActionLink("Home", "Admin")" class="sidebar-link text-muted"><i class="o-user-1 mr-3 text-gray"></i><span>Admin</span></a></li>
                 <li class="sidebar-list-item">
                     <a href="#" data-toggle="collapse" data-target="#page" aria-expanded="false" aria-controls="pages" class="sidebar-link text-muted"><i class="o-profile-1 mr-3 text-gray"></i><span>Customer</span></a>
@@ -122,7 +124,6 @@
                             </ul>
                         </div>
                     </li>*@
-                <li class="sidebar-list-item"><a href="index.html" class="sidebar-link text-muted"><i class="o-home-1 mr-3 text-gray"></i><span>History</span></a></li>
                 <li class="sidebar-list-item">
                     <a href="#" data-toggle="collapse" data-target="#pages" aria-expanded="false" aria-controls="pages" class="sidebar-link text-muted"><i class="o-news-article-1 mr-3 text-gray"></i><span>Books</span></a>
                     <div id="pages" class="collapse">
@@ -130,10 +131,11 @@
                             <li class="sidebar-list-item"><a href="@Url.ActionLink("Category", "Books")" class="sidebar-link text-muted pl-lg-5">Category</a></li>
                             <li class="sidebar-list-item"><a href="@Url.ActionLink("AddBook", "Books")" class="sidebar-link text-muted pl-lg-5">Books</a></li>
                             <li class="sidebar-list-item"><a href="@Url.ActionLink("BooksInventory", "Books")" class="sidebar-link text-muted pl-lg-5">Stock</a></li>
+                            <li class="sidebar-list-item"><a href="@Url.ActionLink("List", "Sales")" class="sidebar-link text-muted pl-lg-5">Sales</a></li>
+
                         </ul>
                     </div>
                 </li>
-                <li class="sidebar-list-item"><a href="login.html" class="sidebar-link text-muted"><i class="o-exit-1 mr-3 text-gray"></i><span>Logout</span></a></li>
             </ul>
             @*<div class="text-gray-400 text-uppercase px-3 px-lg-4 py-4 font-weight-bold small headings-font-family">EXTRAS</div>
                 <ul class="sidebar-menu list-unstyled">
