--- a/AppDev2ndCW/Views/Users/LongStocked.cshtml
+++ b/AppDev2ndCW/Views/Users/LongStocked.cshtml
@@ -1,31 +1,28 @@
 ﻿
-@{
-    Layout = "_DashboardLayout";
-}
+@{ Layout = "_DashboardLayout"; }
 
 <div class="container py-5">
     <div class="row">
         <div class="col-md-6 mx-auto">
             <div class="text-center">
-                <div class="row mb-4">
+                <p class="h3">Long Stocked Items</p>
+                <p><code>These books have been in stock for a long time</code></p>
+                <div class="row my-4">
                     <div class="col-md-8 mx-auto">
-                        <img src="/img/inventory.svg" alt="Book SVG" class="img-fluid" />
+                        <img src="/img/long_stocked.svg" alt="Out of Stock SVG" class="img-fluid" />
                     </div>
                 </div>
-                <p class="h3">Book Inventory</p>
             </div>
         </div>
     </div>
 
     <div my-4>
-        <div class="row my-4">
+        <div class="row py-5">
             <div class="col-lg-11 mx-auto">
-                <div class="card border-0 shadow">
-                    <div class="card-body p-5">
-
-                        <!-- Responsive table -->
+                <div class="card rounded shadow border-0">
+                    <div class="card-body p-5 bg-white rounded">
                         <div class="table-responsive">
-                            <table class="table m-0">
+                            <table id="example" style="width:100%" class="table table-striped table-bordered">
                                 <thead>
                                     <tr>
                                         <th scope="col">#</th>
@@ -35,7 +32,6 @@
                                         <th scope="col">Stocked Date</th>
                                         <th scope="col">Stock Quantity</th>
                                         <th scope="col">Sales Date</th>
-                                        <th scope="col">Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -48,26 +44,19 @@
                                         <td>26 April, 2021</td>
                                         <td>100</td>
                                         <td>28 April, 2021</td>
-                                        <td>
-                                            <!-- Call to action buttons -->
-                                            <ul class="list-inline m-0">
-                                                <li class="list-inline-item">
-                                                    <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
-                                                </li>
-                                                <li class="list-inline-item">
-                                                    <button class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
-                                                </li>
-                                            </ul>
-                                        </td>
                                     </tr>
 
                                 </tbody>
                             </table>
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="text-center">
+            <button class="btn btn-primary px-4">Remove all Books from Stock <i class="fas fa-minus-square ml-2"></i></button>
+        </div>
+
     </div>
 </div>
